# libev_example

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
docs/: server.md
etc/: log.properties
include/: Calculator.hpp  stdcfg.hpp  stdcfg.hpp.in
include/mk/: event.h  event_libev.h  socket.h  socket_server.h  transport.h  transport_tcp.h
jinja2/: class.py
jinja2/codegen/: .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  LICENSE  Makefile  README.rst  setup.cfg  setup.py  tox.ini  travis_pypi_setup.py
jinja2/codegen/.github/: ISSUE_TEMPLATE.md
jinja2/codegen/codegen/: __init__.py  cli.py  codegen.py
jinja2/codegen/docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
jinja2/codegen/tests/: test_codegen.py
jinja2/templates/: class.j2
sbin/: build  class.tpl.sh  cmake_xcode  setup_git
src/: CMakeLists.txt  f.cpp  libev1.cpp  libev2.cpp  libev3.cpp  libev4.cpp  libev5.cpp  main.cpp
src/mk/: event.cpp  event_libev.cpp  socket_server.cpp  transport.cpp  transport_tcp.cpp
test/: CMakeLists.txt  CalculatorTests.cpp
